--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   box-shadow: 0 0 20px yellow;
 }
 body {
-  background-image: url("moon.jpg"); /* or .jpg, .png */
+  background-image: url("blast.png"); /* or .jpg, .png */
   background-repeat: repeat;              /* repeat, no-repeat, or repeat-x/y */
   background-size: cover;                  /* or cover, contain */
   background-position: top left;
@@ -57,4 +57,8 @@ body {
   color: lime;
   font-family: "Courier New", monospace;
   margin: 0;
+}
+img {
+  border: 5px solid;
+  border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
 }
